<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/order_id_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/order_id"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/order_orderer_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/order_orderer"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/order_date_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/order_date"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/order_phone_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/order_phone"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/order_email_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/order_email"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/order_address_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/order_address"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/order_company_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/order_company"
            />
        
    </LinearLayout>
    
    <View android:layout_height="1dip"
        android:layout_width="match_parent"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="3dip"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
    <com.prom.by.views.LinearLayoutList
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/order_items"
        />
    
</LinearLayout>
</ScrollView>